exports['api explore should accept buffer with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": 3454,
      "unmappedBytes": 0,
      "files": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "dist/bar.js": 2854,
        "dist/foo.js": 137,
        "<unmapped>": 0
      }
    }
  ],
  "errors": []
}

exports['api explore should accept buffers with js and map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": 697,
      "unmappedBytes": 0,
      "files": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "dist/bar.js": 97,
        "dist/foo.js": 137,
        "<unmapped>": 0
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data respecting onlyMapped and replace options 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 697,
      "unmappedBytes": 0,
      "files": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "hello/bar.js": 97,
        "hello/foo.js": 137
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data when provided with file with referenced map 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 697,
      "unmappedBytes": 0,
      "files": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "dist/bar.js": 97,
        "dist/foo.js": 137,
        "<unmapped>": 0
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data when provided with file with separated map file 1'] = {
  "bundles": [
    {
      "bundleName": "data/no-map.js",
      "totalBytes": 662,
      "unmappedBytes": 0,
      "files": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "dist/bar.js": 62,
        "dist/foo.js": 137,
        "<unmapped>": 0
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data when provided with js file with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 3454,
      "unmappedBytes": 0,
      "files": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "dist/bar.js": 2854,
        "dist/foo.js": 137,
        "<unmapped>": 0
      }
    }
  ],
  "errors": []
}

exports['api explore when output format specified should generate JSON 1'] = `
{
  "results": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 697,
      "unmappedBytes": 0,
      "files": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "dist/bar.js": 97,
        "dist/foo.js": 137,
        "<unmapped>": 0
      }
    }
  ]
}
`

exports['api explore when output format specified should generate TSV 1'] = `
Source\tSize\r
node_modules/browserify/node_modules/browser-pack/_prelude.js\t463\r
dist/foo.js\t137\r
dist/bar.js\t97\r
<unmapped>\t0\r
\r
dist/bar.js\t2854\r
node_modules/browserify/node_modules/browser-pack/_prelude.js\t463\r
dist/foo.js\t137\r
<unmapped>\t0
`
